<resources>
    <string name="app_name">Countries</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flag_of_country">flag of country</string>
    <string name="country">Country</string>
    <string name="capital">Capital</string>
    <string name="region">Region</string>
    <string name="currency">Currency</string>
    <string name="language">Language</string>
</resources>